// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Progress demo -- base 1`] = `
.emotion-16 {
  font-size: 12px;
}

.emotion-16 .uc-fe-form-item {
  margin-bottom: 16px;
}

.emotion-16 .uc-fe-form-item:last-child {
  margin-bottom: 0;
}

.emotion-14 {
  position: relative;
  display: block;
  height: auto;
  margin-left: -8px;
  margin-right: -8px;
}

.emotion-14:before,
.emotion-14:after {
  content: ' ';
  display: table;
}

.emotion-14:after {
  clear: both;
}

.emotion-14 > .uc-fe-col {
  padding-left: 8px;
  padding-right: 8px;
}

.emotion-1 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 16.66666667%;
  padding-top: 4px;
  line-height: 20px;
  word-break: break-all;
  color: #526075;
}

.emotion-10 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 75%;
}

.emotion-7 {
  position: relative;
  box-sizing: border-box;
  border-radius: 2px;
  color: #0a1633;
  height: 28px;
  display: inline-block;
  vertical-align: middle;
  border: 1px solid #d2d6ea;
  padding-right: 22px;
  border-right-width: 0;
}

.emotion-7 .uc-fe-numberinput-input-wrap {
  position: relative;
}

.emotion-7 .uc-fe-numberinput-input {
  border: none;
  outline: none;
  padding: 0;
  margin: 0;
  color: inherit;
}

.emotion-7 .uc-fe-numberinput-suffix {
  color: #7a8baa;
  margin: 0 4px;
  display: inline-block;
  vertical-align: middle;
}

.emotion-7 .uc-fe-numberinput-handler-up,
.emotion-7 .uc-fe-numberinput-handler-down {
  position: absolute;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  box-sizing: border-box;
  border-radius: 2px;
  border-style: solid;
  border-color: #d2d6ea;
  cursor: pointer;
  color: #0a1633;
  box-shadow: 0 2px 3px 0 rgba(0,0,0,0.12),inset 0 -2px 0 0 #e3e9ff;
  background: #ffffff;
  vertical-align: middle;
}

.emotion-7 .uc-fe-numberinput-handler-up:hover,
.emotion-7 .uc-fe-numberinput-handler-down:hover {
  color: #3860f4;
  box-shadow: 0 0 1px 0 rgba(0,0,0,0.12),0 8px 12px -4px rgba(0,0,0,0.12),0 2px 1px -1px rgba(0,0,0,0.05),inset 0 -2px 0 0 #e3e9ff;
}

.emotion-7 .uc-fe-numberinput-handler-up.uc-fe-numberinput-handler-disabled,
.emotion-7 .uc-fe-numberinput-handler-down.uc-fe-numberinput-handler-disabled {
  cursor: default;
  pointer-events: none;
  color: #cccccc;
  fill: #cccccc;
  border-color: #c3cad9;
}

.emotion-7 .uc-fe-numberinput-input {
  line-height: 26px;
  height: 26px;
  display: inline-block;
  vertical-align: middle;
}

.emotion-7 .uc-fe-numberinput-input::-webkit-input-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.2);
}

.emotion-7 .uc-fe-numberinput-input::-moz-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.2);
}

.emotion-7 .uc-fe-numberinput-input:-ms-input-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.2);
}

.emotion-7 .uc-fe-numberinput-input::placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.2);
}

.emotion-7:hover {
  border-color: #c3cad9;
}

.emotion-7 .uc-fe-numberinput-input-wrap {
  box-shadow: inset 0 3px 0 0 rgba(0,0,0,0.05);
  background: #fafafc;
}

.emotion-7 .uc-fe-numberinput-input-wrap:hover {
  background: #f6f6fb;
}

.emotion-7 .uc-fe-numberinput-input {
  padding: 0 0 0 8px;
  text-align: left;
  box-shadow: none;
  background: transparent;
  width: 34px;
}

.emotion-7 .uc-fe-numberinput-handler-up,
.emotion-7 .uc-fe-numberinput-handler-down {
  height: 13px;
  width: 22px;
  right: 0;
  box-sizing: content-box;
  border-radius: 0;
}

.emotion-7 .uc-fe-numberinput-handler-up:hover,
.emotion-7 .uc-fe-numberinput-handler-down:hover {
  color: #3860f4;
}

.emotion-7 .uc-fe-numberinput-handler-up {
  border-width: 0 0 0 1px;
  top: -1px;
  padding-top: 1px;
}

.emotion-7 .uc-fe-numberinput-handler-down {
  border-width: 1px 0 0 1px;
  bottom: 0;
  border-top-color: #c3cad9;
}

.emotion-3 {
  -webkit-transition: fill 0.3s,width 0.3s,height 0.3s;
  transition: fill 0.3s,width 0.3s,height 0.3s;
  display: inline-block;
  vertical-align: middle;
  fill: currentcolor;
  width: 12px;
  height: 12px;
}

.emotion-20 {
  position: relative;
  height: 18px;
  line-height: 18px;
}

.emotion-20:before,
.emotion-20:after {
  content: ' ';
  display: table;
}

.emotion-20:after {
  clear: both;
}

.emotion-18 {
  position: relative;
  left: 10%;
  -webkit-transition: left 0.5s;
  transition: left 0.5s;
  width: 50px;
  margin-left: -25px;
  display: inline-block;
  text-align: center;
}

.emotion-24 {
  height: 10px;
  background: #dfe0f1;
  border-radius: 5px;
  overflow: hidden;
  position: relative;
}

.emotion-22 {
  width: 10%;
  height: 100%;
  border: none;
  border-radius: 5px;
  -webkit-transition: width 0.5s;
  transition: width 0.5s;
  position: relative;
  background: #3860f4;
}

.emotion-26 {
  float: right;
}

.emotion-32 {
  position: relative;
  line-height: 1;
  background-color: transparent;
}

.emotion-30 {
  position: absolute;
  -webkit-inset-block-start: 50%;
  -ms-intb-rlock-start: 50%;
  inset-block-start: 50%;
  inset-inline-start: 0;
  width: 100%;
  margin: 0;
  padding: 0;
  line-height: 1;
  white-space: normal;
  text-align: center;
  -webkit-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
}

.emotion-16 {
  font-size: 12px;
}

.emotion-16 .uc-fe-form-item {
  margin-bottom: 16px;
}

.emotion-16 .uc-fe-form-item:last-child {
  margin-bottom: 0;
}

.emotion-14 {
  position: relative;
  display: block;
  height: auto;
  margin-left: -8px;
  margin-right: -8px;
}

.emotion-14:before,
.emotion-14:after {
  content: ' ';
  display: table;
}

.emotion-14:after {
  clear: both;
}

.emotion-14 > .uc-fe-col {
  padding-left: 8px;
  padding-right: 8px;
}

.emotion-1 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 16.66666667%;
  padding-top: 4px;
  line-height: 20px;
  word-break: break-all;
  color: #526075;
}

.emotion-10 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 75%;
}

.emotion-7 {
  position: relative;
  box-sizing: border-box;
  border-radius: 2px;
  color: #0a1633;
  height: 28px;
  display: inline-block;
  vertical-align: middle;
  border: 1px solid #d2d6ea;
  padding-right: 22px;
  border-right-width: 0;
}

.emotion-7 .uc-fe-numberinput-input-wrap {
  position: relative;
}

.emotion-7 .uc-fe-numberinput-input {
  border: none;
  outline: none;
  padding: 0;
  margin: 0;
  color: inherit;
}

.emotion-7 .uc-fe-numberinput-suffix {
  color: #7a8baa;
  margin: 0 4px;
  display: inline-block;
  vertical-align: middle;
}

.emotion-7 .uc-fe-numberinput-handler-up,
.emotion-7 .uc-fe-numberinput-handler-down {
  position: absolute;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  box-sizing: border-box;
  border-radius: 2px;
  border-style: solid;
  border-color: #d2d6ea;
  cursor: pointer;
  color: #0a1633;
  box-shadow: 0 2px 3px 0 rgba(0,0,0,0.12),inset 0 -2px 0 0 #e3e9ff;
  background: #ffffff;
  vertical-align: middle;
}

.emotion-7 .uc-fe-numberinput-handler-up:hover,
.emotion-7 .uc-fe-numberinput-handler-down:hover {
  color: #3860f4;
  box-shadow: 0 0 1px 0 rgba(0,0,0,0.12),0 8px 12px -4px rgba(0,0,0,0.12),0 2px 1px -1px rgba(0,0,0,0.05),inset 0 -2px 0 0 #e3e9ff;
}

.emotion-7 .uc-fe-numberinput-handler-up.uc-fe-numberinput-handler-disabled,
.emotion-7 .uc-fe-numberinput-handler-down.uc-fe-numberinput-handler-disabled {
  cursor: default;
  pointer-events: none;
  color: #cccccc;
  fill: #cccccc;
  border-color: #c3cad9;
}

.emotion-7 .uc-fe-numberinput-input {
  line-height: 26px;
  height: 26px;
  display: inline-block;
  vertical-align: middle;
}

.emotion-7 .uc-fe-numberinput-input::-webkit-input-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.2);
}

.emotion-7 .uc-fe-numberinput-input::-moz-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.2);
}

.emotion-7 .uc-fe-numberinput-input:-ms-input-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.2);
}

.emotion-7 .uc-fe-numberinput-input::placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.2);
}

.emotion-7:hover {
  border-color: #c3cad9;
}

.emotion-7 .uc-fe-numberinput-input-wrap {
  box-shadow: inset 0 3px 0 0 rgba(0,0,0,0.05);
  background: #fafafc;
}

.emotion-7 .uc-fe-numberinput-input-wrap:hover {
  background: #f6f6fb;
}

.emotion-7 .uc-fe-numberinput-input {
  padding: 0 0 0 8px;
  text-align: left;
  box-shadow: none;
  background: transparent;
  width: 34px;
}

.emotion-7 .uc-fe-numberinput-handler-up,
.emotion-7 .uc-fe-numberinput-handler-down {
  height: 13px;
  width: 22px;
  right: 0;
  box-sizing: content-box;
  border-radius: 0;
}

.emotion-7 .uc-fe-numberinput-handler-up:hover,
.emotion-7 .uc-fe-numberinput-handler-down:hover {
  color: #3860f4;
}

.emotion-7 .uc-fe-numberinput-handler-up {
  border-width: 0 0 0 1px;
  top: -1px;
  padding-top: 1px;
}

.emotion-7 .uc-fe-numberinput-handler-down {
  border-width: 1px 0 0 1px;
  bottom: 0;
  border-top-color: #c3cad9;
}

.emotion-3 {
  -webkit-transition: fill 0.3s,width 0.3s,height 0.3s;
  transition: fill 0.3s,width 0.3s,height 0.3s;
  display: inline-block;
  vertical-align: middle;
  fill: currentcolor;
  width: 12px;
  height: 12px;
}

.emotion-20 {
  position: relative;
  height: 18px;
  line-height: 18px;
}

.emotion-20:before,
.emotion-20:after {
  content: ' ';
  display: table;
}

.emotion-20:after {
  clear: both;
}

.emotion-18 {
  position: relative;
  left: 10%;
  -webkit-transition: left 0.5s;
  transition: left 0.5s;
  width: 50px;
  margin-left: -25px;
  display: inline-block;
  text-align: center;
}

.emotion-24 {
  height: 10px;
  background: #dfe0f1;
  border-radius: 5px;
  overflow: hidden;
  position: relative;
}

.emotion-22 {
  width: 10%;
  height: 100%;
  border: none;
  border-radius: 5px;
  -webkit-transition: width 0.5s;
  transition: width 0.5s;
  position: relative;
  background: #3860f4;
}

.emotion-26 {
  float: right;
}

.emotion-32 {
  position: relative;
  line-height: 1;
  background-color: transparent;
}

.emotion-30 {
  position: absolute;
  -webkit-inset-block-start: 50%;
  -ms-intb-rlock-start: 50%;
  inset-block-start: 50%;
  inset-inline-start: 0;
  width: 100%;
  margin: 0;
  padding: 0;
  line-height: 1;
  white-space: normal;
  text-align: center;
  -webkit-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
}

<div>
  <form
    class="uc-fe-form emotion-16 emotion-130"
  >
    <div
      class="uc-fe-row uc-fe-form-item emotion-12 emotion-13 emotion-14 emotion-15"
    >
      <div
        class="uc-fe-col uc-fe-form-label emotion-0 emotion-1 emotion-2"
        span="2"
      >
        percent
      </div>
      <div
        class="uc-fe-col uc-fe-form-controller emotion-9 emotion-10 emotion-2"
        span="9"
      >
        <div
          class="uc-fe-numberinput uc-fe-numberinput-styletype-default emotion-7 emotion-8"
        >
          <div>
            <span
              class="uc-fe-numberinput-handler-up"
              unselectable="unselectable"
            >
              <svg
                class=" emotion-3 emotion-4"
                viewBox="0 0 24 24"
              >
                <path
                  d="M12.6965559,6.27668537 L21.8268863,15.0324157 C22.0577046,15.253764 22.0577046,15.6126405 21.8268863,15.8339888 C21.7160434,15.940284 21.5657082,16 21.4089527,16 L2.5910473,16 C2.26462089,16 2,15.746236 2,15.4332022 C2,15.2828781 2.06227088,15.1387109 2.17311375,15.0324157 L11.3034441,6.27668537 C11.6881413,5.90777154 12.3118587,5.90777154 12.6965559,6.27668537 Z"
                />
              </svg>
            </span>
            <span
              class="uc-fe-numberinput-handler-down"
              unselectable="unselectable"
            >
              <svg
                class=" emotion-3 emotion-4"
                viewBox="0 0 24 24"
              >
                <path
                  d="M12.6965559,17.7233146 L21.8268863,8.96758429 C22.0577046,8.746236 22.0577046,8.38735951 21.8268863,8.16601122 C21.7160434,8.05971602 21.5657082,8 21.4089527,8 L2.5910473,8 C2.26462089,8 2,8.253764 2,8.56679776 C2,8.71712187 2.06227088,8.86128909 2.17311375,8.96758429 L11.3034441,17.7233146 C11.6881413,18.0922285 12.3118587,18.0922285 12.6965559,17.7233146 Z"
                />
              </svg>
            </span>
          </div>
          <div
            class="uc-fe-numberinput-input-wrap"
          >
            <input
              autocomplete="off"
              class="uc-fe-numberinput-input"
              max="100"
              min="0"
              step="1"
              value="10"
            />
          </div>
        </div>
      </div>
    </div>
  </form>
  <div
    class="demo-wrap"
    style="padding:24px"
  >
    <div>
      <span
        class="emotion-20 emotion-21"
      >
        <span
          class="emotion-18 emotion-19"
        >
          10%
        </span>
      </span>
      <div
        class=" emotion-24 emotion-25"
        stroke-width="10"
      >
        <div
          class=" emotion-22 emotion-23"
        />
      </div>
      <span
        class="emotion-20 emotion-21"
      >
        <span>
          0%
        </span>
        <span
          class="emotion-26 emotion-27"
        >
          100%
        </span>
      </span>
    </div>
  </div>
  <div
    class="demo-wrap"
    style="padding:24px;width:100px"
  >
    <div
      class="emotion-32 emotion-33"
    >
      <svg
        class="rc-progress-circle"
        role="presentation"
        viewBox="-50 -50 100 100"
      >
        <circle
          class="rc-progress-circle-trail"
          cx="0"
          cy="0"
          r="45"
          stroke="#dfe0f1"
          stroke-linecap="round"
          stroke-width="10"
          style="stroke:#dfe0f1;stroke-dasharray:282.7433388230814px 282.7433388230814;stroke-dashoffset:0;transform:rotate(-90deg);transform-origin:0 0;transition:stroke-dashoffset .3s ease 0s, stroke-dasharray .3s ease 0s, stroke .3s, stroke-width .06s ease .3s, opacity .3s ease 0s;fill-opacity:0"
        />
        <circle
          class="rc-progress-circle-path"
          cx="0"
          cy="0"
          opacity="1"
          r="45"
          stroke-linecap="round"
          stroke-width="10"
          style="stroke:#3860f4;stroke-dasharray:282.7433388230814px 282.7433388230814;stroke-dashoffset:259.4690049407733;transform:rotate(-90deg);transform-origin:0 0;transition:stroke-dashoffset .3s ease 0s, stroke-dasharray .3s ease 0s, stroke .3s, stroke-width .06s ease .3s, opacity .3s ease 0s;fill-opacity:0"
        />
      </svg>
      <div
        class="emotion-30 emotion-31"
      >
        10%
      </div>
    </div>
  </div>
</div>
`;

exports[`Progress demo -- color 1`] = `
.emotion-2 {
  position: relative;
  height: 18px;
  line-height: 18px;
}

.emotion-2:before,
.emotion-2:after {
  content: ' ';
  display: table;
}

.emotion-2:after {
  clear: both;
}

.emotion-6 {
  height: 10px;
  background: #dfe0f1;
  border-radius: 5px;
  overflow: hidden;
  position: relative;
}

.emotion-8 {
  float: right;
}

.emotion-62 {
  position: relative;
  line-height: 1;
  background-color: transparent;
}

.emotion-60 {
  position: absolute;
  -webkit-inset-block-start: 50%;
  -ms-intb-rlock-start: 50%;
  inset-block-start: 50%;
  inset-inline-start: 0;
  width: 100%;
  margin: 0;
  padding: 0;
  line-height: 1;
  white-space: normal;
  text-align: center;
  -webkit-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
}

.emotion-0 {
  position: relative;
  left: 40%;
  -webkit-transition: left 0.5s;
  transition: left 0.5s;
  width: 50px;
  margin-left: -25px;
  display: inline-block;
  text-align: center;
}

.emotion-4 {
  width: 40%;
  height: 100%;
  border: none;
  border-radius: 5px;
  -webkit-transition: width 0.5s;
  transition: width 0.5s;
  position: relative;
  background: #3860f4;
}

.emotion-12 {
  position: relative;
  left: 100%;
  -webkit-transition: left 0.5s;
  transition: left 0.5s;
  width: 50px;
  margin-left: -25px;
  display: inline-block;
  text-align: center;
}

.emotion-16 {
  width: 100%;
  height: 100%;
  border: none;
  border-radius: 5px;
  -webkit-transition: width 0.5s;
  transition: width 0.5s;
  position: relative;
  background: #15AD31;
}

.emotion-24 {
  position: relative;
  left: 20%;
  -webkit-transition: left 0.5s;
  transition: left 0.5s;
  width: 50px;
  margin-left: -25px;
  display: inline-block;
  text-align: center;
}

.emotion-28 {
  width: 20%;
  height: 100%;
  border: none;
  border-radius: 5px;
  -webkit-transition: width 0.5s;
  transition: width 0.5s;
  position: relative;
  background: #ffc42e;
}

.emotion-36 {
  position: relative;
  left: 50%;
  -webkit-transition: left 0.5s;
  transition: left 0.5s;
  width: 50px;
  margin-left: -25px;
  display: inline-block;
  text-align: center;
}

.emotion-40 {
  width: 50%;
  height: 100%;
  border: none;
  border-radius: 5px;
  -webkit-transition: width 0.5s;
  transition: width 0.5s;
  position: relative;
  background: #f44336;
}

.emotion-48 {
  position: relative;
  left: 67%;
  -webkit-transition: left 0.5s;
  transition: left 0.5s;
  width: 50px;
  margin-left: -25px;
  display: inline-block;
  text-align: center;
}

.emotion-52 {
  width: 67%;
  height: 100%;
  border: none;
  border-radius: 5px;
  -webkit-transition: width 0.5s;
  transition: width 0.5s;
  position: relative;
  background: #411;
}

.emotion-80 > .uc-fe-combine-item,
.emotion-80 > .uc-fe-combine-separator {
  vertical-align: middle;
  display: inline-block;
}

.emotion-80 > .uc-fe-combine-item:focus {
  z-index: 2;
}

.emotion-80 > .uc-fe-combine-item:hover {
  z-index: 3;
}

.emotion-80 > .uc-fe-combine-item+.uc-fe-combine-item,
.emotion-80 > .uc-fe-combine-separator+.uc-fe-combine-item,
.emotion-80 > .uc-fe-combine-item+.uc-fe-combine-separator {
  margin-left: 8px;
}

.emotion-2 {
  position: relative;
  height: 18px;
  line-height: 18px;
}

.emotion-2:before,
.emotion-2:after {
  content: ' ';
  display: table;
}

.emotion-2:after {
  clear: both;
}

.emotion-6 {
  height: 10px;
  background: #dfe0f1;
  border-radius: 5px;
  overflow: hidden;
  position: relative;
}

.emotion-8 {
  float: right;
}

.emotion-62 {
  position: relative;
  line-height: 1;
  background-color: transparent;
}

.emotion-60 {
  position: absolute;
  -webkit-inset-block-start: 50%;
  -ms-intb-rlock-start: 50%;
  inset-block-start: 50%;
  inset-inline-start: 0;
  width: 100%;
  margin: 0;
  padding: 0;
  line-height: 1;
  white-space: normal;
  text-align: center;
  -webkit-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
}

.emotion-0 {
  position: relative;
  left: 40%;
  -webkit-transition: left 0.5s;
  transition: left 0.5s;
  width: 50px;
  margin-left: -25px;
  display: inline-block;
  text-align: center;
}

.emotion-4 {
  width: 40%;
  height: 100%;
  border: none;
  border-radius: 5px;
  -webkit-transition: width 0.5s;
  transition: width 0.5s;
  position: relative;
  background: #3860f4;
}

.emotion-12 {
  position: relative;
  left: 100%;
  -webkit-transition: left 0.5s;
  transition: left 0.5s;
  width: 50px;
  margin-left: -25px;
  display: inline-block;
  text-align: center;
}

.emotion-16 {
  width: 100%;
  height: 100%;
  border: none;
  border-radius: 5px;
  -webkit-transition: width 0.5s;
  transition: width 0.5s;
  position: relative;
  background: #15AD31;
}

.emotion-24 {
  position: relative;
  left: 20%;
  -webkit-transition: left 0.5s;
  transition: left 0.5s;
  width: 50px;
  margin-left: -25px;
  display: inline-block;
  text-align: center;
}

.emotion-28 {
  width: 20%;
  height: 100%;
  border: none;
  border-radius: 5px;
  -webkit-transition: width 0.5s;
  transition: width 0.5s;
  position: relative;
  background: #ffc42e;
}

.emotion-36 {
  position: relative;
  left: 50%;
  -webkit-transition: left 0.5s;
  transition: left 0.5s;
  width: 50px;
  margin-left: -25px;
  display: inline-block;
  text-align: center;
}

.emotion-40 {
  width: 50%;
  height: 100%;
  border: none;
  border-radius: 5px;
  -webkit-transition: width 0.5s;
  transition: width 0.5s;
  position: relative;
  background: #f44336;
}

.emotion-48 {
  position: relative;
  left: 67%;
  -webkit-transition: left 0.5s;
  transition: left 0.5s;
  width: 50px;
  margin-left: -25px;
  display: inline-block;
  text-align: center;
}

.emotion-52 {
  width: 67%;
  height: 100%;
  border: none;
  border-radius: 5px;
  -webkit-transition: width 0.5s;
  transition: width 0.5s;
  position: relative;
  background: #411;
}

.emotion-80 > .uc-fe-combine-item,
.emotion-80 > .uc-fe-combine-separator {
  vertical-align: middle;
  display: inline-block;
}

.emotion-80 > .uc-fe-combine-item:focus {
  z-index: 2;
}

.emotion-80 > .uc-fe-combine-item:hover {
  z-index: 3;
}

.emotion-80 > .uc-fe-combine-item+.uc-fe-combine-item,
.emotion-80 > .uc-fe-combine-separator+.uc-fe-combine-item,
.emotion-80 > .uc-fe-combine-item+.uc-fe-combine-separator {
  margin-left: 8px;
}

<div>
  <div
    class="demo-wrap"
    style="padding:24px"
  >
    <div>
      <span
        class="emotion-2 emotion-3"
      >
        <span
          class="emotion-0 emotion-1"
        >
          40%
        </span>
      </span>
      <div
        class=" emotion-6 emotion-7"
        stroke-width="10"
      >
        <div
          class=" emotion-4 emotion-5"
        />
      </div>
      <span
        class="emotion-2 emotion-3"
      >
        <span>
          0%
        </span>
        <span
          class="emotion-8 emotion-9"
        >
          100%
        </span>
      </span>
    </div>
  </div>
  <div
    class="demo-wrap"
    style="padding:24px"
  >
    <div>
      <span
        class="emotion-2 emotion-3"
      >
        <span
          class="emotion-12 emotion-1"
        >
          100%
        </span>
      </span>
      <div
        class=" emotion-6 emotion-7"
        stroke-width="10"
      >
        <div
          class=" emotion-16 emotion-5"
          color="success"
        />
      </div>
      <span
        class="emotion-2 emotion-3"
      >
        <span>
          0%
        </span>
        <span
          class="emotion-8 emotion-9"
        >
          100%
        </span>
      </span>
    </div>
  </div>
  <div
    class="demo-wrap"
    style="padding:24px"
  >
    <div>
      <span
        class="emotion-2 emotion-3"
      >
        <span
          class="emotion-24 emotion-1"
        >
          20%
        </span>
      </span>
      <div
        class=" emotion-6 emotion-7"
        stroke-width="10"
      >
        <div
          class=" emotion-28 emotion-5"
          color="warn"
        />
      </div>
      <span
        class="emotion-2 emotion-3"
      >
        <span>
          0%
        </span>
        <span
          class="emotion-8 emotion-9"
        >
          100%
        </span>
      </span>
    </div>
  </div>
  <div
    class="demo-wrap"
    style="padding:24px"
  >
    <div>
      <span
        class="emotion-2 emotion-3"
      >
        <span
          class="emotion-36 emotion-1"
        >
          50%
        </span>
      </span>
      <div
        class=" emotion-6 emotion-7"
        stroke-width="10"
      >
        <div
          class=" emotion-40 emotion-5"
          color="error"
        />
      </div>
      <span
        class="emotion-2 emotion-3"
      >
        <span>
          0%
        </span>
        <span
          class="emotion-8 emotion-9"
        >
          100%
        </span>
      </span>
    </div>
  </div>
  <div
    class="demo-wrap"
    style="padding:24px"
  >
    <div>
      <span
        class="emotion-2 emotion-3"
      >
        <span
          class="emotion-48 emotion-1"
        >
          67%
        </span>
      </span>
      <div
        class=" emotion-6 emotion-7"
        stroke-width="10"
      >
        <div
          class=" emotion-52 emotion-5"
          color="#411"
        />
      </div>
      <span
        class="emotion-2 emotion-3"
      >
        <span>
          0%
        </span>
        <span
          class="emotion-8 emotion-9"
        >
          100%
        </span>
      </span>
    </div>
  </div>
  <div
    class="demo-wrap"
    style="padding:24px"
  >
    <div
      class="uc-fe-combine emotion-80 emotion-81"
      spacing="md"
    >
      <div
        class="uc-fe-combine-item"
      >
        <div
          class=" emotion-62 emotion-63"
          style="width:100px"
        >
          <svg
            class="rc-progress-circle"
            role="presentation"
            viewBox="-50 -50 100 100"
          >
            <circle
              class="rc-progress-circle-trail"
              cx="0"
              cy="0"
              r="45"
              stroke="#dfe0f1"
              stroke-linecap="round"
              stroke-width="10"
              style="stroke:#dfe0f1;stroke-dasharray:282.7433388230814px 282.7433388230814;stroke-dashoffset:0;transform:rotate(-90deg);transform-origin:0 0;transition:stroke-dashoffset .3s ease 0s, stroke-dasharray .3s ease 0s, stroke .3s, stroke-width .06s ease .3s, opacity .3s ease 0s;fill-opacity:0"
            />
            <circle
              class="rc-progress-circle-path"
              cx="0"
              cy="0"
              opacity="1"
              r="45"
              stroke-linecap="round"
              stroke-width="10"
              style="stroke:#3860f4;stroke-dasharray:282.7433388230814px 282.7433388230814;stroke-dashoffset:174.64600329384882;transform:rotate(-90deg);transform-origin:0 0;transition:stroke-dashoffset .3s ease 0s, stroke-dasharray .3s ease 0s, stroke .3s, stroke-width .06s ease .3s, opacity .3s ease 0s;fill-opacity:0"
            />
          </svg>
          <div
            class="emotion-60 emotion-61"
          >
            40%
          </div>
        </div>
      </div>
      <div
        class="uc-fe-combine-item"
      >
        <div
          class=" emotion-62 emotion-63"
          style="width:100px"
        >
          <svg
            class="rc-progress-circle"
            role="presentation"
            viewBox="-50 -50 100 100"
          >
            <circle
              class="rc-progress-circle-trail"
              cx="0"
              cy="0"
              r="45"
              stroke="#dfe0f1"
              stroke-linecap="round"
              stroke-width="10"
              style="stroke:#dfe0f1;stroke-dasharray:282.7433388230814px 282.7433388230814;stroke-dashoffset:0;transform:rotate(-90deg);transform-origin:0 0;transition:stroke-dashoffset .3s ease 0s, stroke-dasharray .3s ease 0s, stroke .3s, stroke-width .06s ease .3s, opacity .3s ease 0s;fill-opacity:0"
            />
            <circle
              class="rc-progress-circle-path"
              cx="0"
              cy="0"
              opacity="1"
              r="45"
              stroke-linecap="round"
              stroke-width="10"
              style="stroke:#15AD31;stroke-dasharray:282.7433388230814px 282.7433388230814;stroke-dashoffset:0;transform:rotate(-90deg);transform-origin:0 0;transition:stroke-dashoffset .3s ease 0s, stroke-dasharray .3s ease 0s, stroke .3s, stroke-width .06s ease .3s, opacity .3s ease 0s;fill-opacity:0"
            />
          </svg>
          <div
            class="emotion-60 emotion-61"
          >
            100%
          </div>
        </div>
      </div>
      <div
        class="uc-fe-combine-item"
      >
        <div
          class=" emotion-62 emotion-63"
          style="width:100px"
        >
          <svg
            class="rc-progress-circle"
            role="presentation"
            viewBox="-50 -50 100 100"
          >
            <circle
              class="rc-progress-circle-trail"
              cx="0"
              cy="0"
              r="45"
              stroke="#dfe0f1"
              stroke-linecap="round"
              stroke-width="10"
              style="stroke:#dfe0f1;stroke-dasharray:282.7433388230814px 282.7433388230814;stroke-dashoffset:0;transform:rotate(-90deg);transform-origin:0 0;transition:stroke-dashoffset .3s ease 0s, stroke-dasharray .3s ease 0s, stroke .3s, stroke-width .06s ease .3s, opacity .3s ease 0s;fill-opacity:0"
            />
            <circle
              class="rc-progress-circle-path"
              cx="0"
              cy="0"
              opacity="1"
              r="45"
              stroke-linecap="round"
              stroke-width="10"
              style="stroke:#ffc42e;stroke-dasharray:282.7433388230814px 282.7433388230814;stroke-dashoffset:231.19467105846513;transform:rotate(-90deg);transform-origin:0 0;transition:stroke-dashoffset .3s ease 0s, stroke-dasharray .3s ease 0s, stroke .3s, stroke-width .06s ease .3s, opacity .3s ease 0s;fill-opacity:0"
            />
          </svg>
          <div
            class="emotion-60 emotion-61"
          >
            20%
          </div>
        </div>
      </div>
      <div
        class="uc-fe-combine-item"
      >
        <div
          class=" emotion-62 emotion-63"
          style="width:100px"
        >
          <svg
            class="rc-progress-circle"
            role="presentation"
            viewBox="-50 -50 100 100"
          >
            <circle
              class="rc-progress-circle-trail"
              cx="0"
              cy="0"
              r="45"
              stroke="#dfe0f1"
              stroke-linecap="round"
              stroke-width="10"
              style="stroke:#dfe0f1;stroke-dasharray:282.7433388230814px 282.7433388230814;stroke-dashoffset:0;transform:rotate(-90deg);transform-origin:0 0;transition:stroke-dashoffset .3s ease 0s, stroke-dasharray .3s ease 0s, stroke .3s, stroke-width .06s ease .3s, opacity .3s ease 0s;fill-opacity:0"
            />
            <circle
              class="rc-progress-circle-path"
              cx="0"
              cy="0"
              opacity="1"
              r="45"
              stroke-linecap="round"
              stroke-width="10"
              style="stroke:#f44336;stroke-dasharray:282.7433388230814px 282.7433388230814;stroke-dashoffset:146.3716694115407;transform:rotate(-90deg);transform-origin:0 0;transition:stroke-dashoffset .3s ease 0s, stroke-dasharray .3s ease 0s, stroke .3s, stroke-width .06s ease .3s, opacity .3s ease 0s;fill-opacity:0"
            />
          </svg>
          <div
            class="emotion-60 emotion-61"
          >
            50%
          </div>
        </div>
      </div>
      <div
        class="uc-fe-combine-item"
      >
        <div
          class=" emotion-62 emotion-63"
          style="width:100px"
        >
          <svg
            class="rc-progress-circle"
            role="presentation"
            viewBox="-50 -50 100 100"
          >
            <circle
              class="rc-progress-circle-trail"
              cx="0"
              cy="0"
              r="45"
              stroke="#dfe0f1"
              stroke-linecap="round"
              stroke-width="10"
              style="stroke:#dfe0f1;stroke-dasharray:282.7433388230814px 282.7433388230814;stroke-dashoffset:0;transform:rotate(-90deg);transform-origin:0 0;transition:stroke-dashoffset .3s ease 0s, stroke-dasharray .3s ease 0s, stroke .3s, stroke-width .06s ease .3s, opacity .3s ease 0s;fill-opacity:0"
            />
            <circle
              class="rc-progress-circle-path"
              cx="0"
              cy="0"
              opacity="1"
              r="45"
              stroke-linecap="round"
              stroke-width="10"
              style="stroke:#411;stroke-dasharray:282.7433388230814px 282.7433388230814;stroke-dashoffset:98.30530181161686;transform:rotate(-90deg);transform-origin:0 0;transition:stroke-dashoffset .3s ease 0s, stroke-dasharray .3s ease 0s, stroke .3s, stroke-width .06s ease .3s, opacity .3s ease 0s;fill-opacity:0"
            />
          </svg>
          <div
            class="emotion-60 emotion-61"
          >
            67%
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Progress demo -- custom 1`] = `
.emotion-2 {
  height: 10px;
  background: #dfe0f1;
  border-radius: 5px;
  overflow: hidden;
  position: relative;
}

.emotion-8 {
  position: relative;
  line-height: 1;
  background-color: transparent;
}

.emotion-0 {
  width: 40%;
  height: 100%;
  border: none;
  border-radius: 5px;
  -webkit-transition: width 0.5s;
  transition: width 0.5s;
  position: relative;
  background: #3860f4;
}

.emotion-2 {
  height: 10px;
  background: #dfe0f1;
  border-radius: 5px;
  overflow: hidden;
  position: relative;
}

.emotion-8 {
  position: relative;
  line-height: 1;
  background-color: transparent;
}

.emotion-0 {
  width: 40%;
  height: 100%;
  border: none;
  border-radius: 5px;
  -webkit-transition: width 0.5s;
  transition: width 0.5s;
  position: relative;
  background: #3860f4;
}

<div>
  <div
    class="demo-wrap"
    style="padding:24px"
  >
    <div
      style="width:100px"
    >
      <div
        class=" emotion-2 emotion-3"
        stroke-width="10"
      >
        <div
          class=" emotion-0 emotion-1"
        />
      </div>
    </div>
  </div>
  <div
    class="demo-wrap"
    style="padding:24px"
  >
    <div
      style="width:100px"
    >
      <div
        class=" emotion-2 emotion-3"
        stroke-width="10"
      >
        <div
          class=" emotion-0 emotion-1"
        />
      </div>
    </div>
  </div>
  <div
    class="demo-wrap"
    style="padding:24px"
  >
    <div
      class="emotion-8 emotion-9"
      style="width:100px"
    >
      <svg
        class="rc-progress-circle"
        role="presentation"
        viewBox="-50 -50 100 100"
      >
        <circle
          class="rc-progress-circle-trail"
          cx="0"
          cy="0"
          r="45"
          stroke="#dfe0f1"
          stroke-linecap="round"
          stroke-width="10"
          style="stroke:#dfe0f1;stroke-dasharray:282.7433388230814px 282.7433388230814;stroke-dashoffset:0;transform:rotate(-90deg);transform-origin:0 0;transition:stroke-dashoffset .3s ease 0s, stroke-dasharray .3s ease 0s, stroke .3s, stroke-width .06s ease .3s, opacity .3s ease 0s;fill-opacity:0"
        />
        <circle
          class="rc-progress-circle-path"
          cx="0"
          cy="0"
          opacity="1"
          r="45"
          stroke-linecap="round"
          stroke-width="10"
          style="stroke:#3860f4;stroke-dasharray:282.7433388230814px 282.7433388230814;stroke-dashoffset:174.64600329384882;transform:rotate(-90deg);transform-origin:0 0;transition:stroke-dashoffset .3s ease 0s, stroke-dasharray .3s ease 0s, stroke .3s, stroke-width .06s ease .3s, opacity .3s ease 0s;fill-opacity:0"
        />
      </svg>
    </div>
  </div>
</div>
`;

exports[`Progress demo -- format 1`] = `
.emotion-16 {
  font-size: 12px;
}

.emotion-16 .uc-fe-form-item {
  margin-bottom: 16px;
}

.emotion-16 .uc-fe-form-item:last-child {
  margin-bottom: 0;
}

.emotion-14 {
  position: relative;
  display: block;
  height: auto;
  margin-left: -8px;
  margin-right: -8px;
}

.emotion-14:before,
.emotion-14:after {
  content: ' ';
  display: table;
}

.emotion-14:after {
  clear: both;
}

.emotion-14 > .uc-fe-col {
  padding-left: 8px;
  padding-right: 8px;
}

.emotion-1 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 16.66666667%;
  padding-top: 4px;
  line-height: 20px;
  word-break: break-all;
  color: #526075;
}

.emotion-10 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 75%;
}

.emotion-7 {
  position: relative;
  box-sizing: border-box;
  border-radius: 2px;
  color: #0a1633;
  height: 28px;
  display: inline-block;
  vertical-align: middle;
  border: 1px solid #d2d6ea;
  padding-right: 22px;
  border-right-width: 0;
}

.emotion-7 .uc-fe-numberinput-input-wrap {
  position: relative;
}

.emotion-7 .uc-fe-numberinput-input {
  border: none;
  outline: none;
  padding: 0;
  margin: 0;
  color: inherit;
}

.emotion-7 .uc-fe-numberinput-suffix {
  color: #7a8baa;
  margin: 0 4px;
  display: inline-block;
  vertical-align: middle;
}

.emotion-7 .uc-fe-numberinput-handler-up,
.emotion-7 .uc-fe-numberinput-handler-down {
  position: absolute;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  box-sizing: border-box;
  border-radius: 2px;
  border-style: solid;
  border-color: #d2d6ea;
  cursor: pointer;
  color: #0a1633;
  box-shadow: 0 2px 3px 0 rgba(0,0,0,0.12),inset 0 -2px 0 0 #e3e9ff;
  background: #ffffff;
  vertical-align: middle;
}

.emotion-7 .uc-fe-numberinput-handler-up:hover,
.emotion-7 .uc-fe-numberinput-handler-down:hover {
  color: #3860f4;
  box-shadow: 0 0 1px 0 rgba(0,0,0,0.12),0 8px 12px -4px rgba(0,0,0,0.12),0 2px 1px -1px rgba(0,0,0,0.05),inset 0 -2px 0 0 #e3e9ff;
}

.emotion-7 .uc-fe-numberinput-handler-up.uc-fe-numberinput-handler-disabled,
.emotion-7 .uc-fe-numberinput-handler-down.uc-fe-numberinput-handler-disabled {
  cursor: default;
  pointer-events: none;
  color: #cccccc;
  fill: #cccccc;
  border-color: #c3cad9;
}

.emotion-7 .uc-fe-numberinput-input {
  line-height: 26px;
  height: 26px;
  display: inline-block;
  vertical-align: middle;
}

.emotion-7 .uc-fe-numberinput-input::-webkit-input-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.2);
}

.emotion-7 .uc-fe-numberinput-input::-moz-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.2);
}

.emotion-7 .uc-fe-numberinput-input:-ms-input-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.2);
}

.emotion-7 .uc-fe-numberinput-input::placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.2);
}

.emotion-7:hover {
  border-color: #c3cad9;
}

.emotion-7 .uc-fe-numberinput-input-wrap {
  box-shadow: inset 0 3px 0 0 rgba(0,0,0,0.05);
  background: #fafafc;
}

.emotion-7 .uc-fe-numberinput-input-wrap:hover {
  background: #f6f6fb;
}

.emotion-7 .uc-fe-numberinput-input {
  padding: 0 0 0 8px;
  text-align: left;
  box-shadow: none;
  background: transparent;
  width: 34px;
}

.emotion-7 .uc-fe-numberinput-handler-up,
.emotion-7 .uc-fe-numberinput-handler-down {
  height: 13px;
  width: 22px;
  right: 0;
  box-sizing: content-box;
  border-radius: 0;
}

.emotion-7 .uc-fe-numberinput-handler-up:hover,
.emotion-7 .uc-fe-numberinput-handler-down:hover {
  color: #3860f4;
}

.emotion-7 .uc-fe-numberinput-handler-up {
  border-width: 0 0 0 1px;
  top: -1px;
  padding-top: 1px;
}

.emotion-7 .uc-fe-numberinput-handler-down {
  border-width: 1px 0 0 1px;
  bottom: 0;
  border-top-color: #c3cad9;
}

.emotion-3 {
  -webkit-transition: fill 0.3s,width 0.3s,height 0.3s;
  transition: fill 0.3s,width 0.3s,height 0.3s;
  display: inline-block;
  vertical-align: middle;
  fill: currentcolor;
  width: 12px;
  height: 12px;
}

.emotion-20 {
  position: relative;
  height: 18px;
  line-height: 18px;
}

.emotion-20:before,
.emotion-20:after {
  content: ' ';
  display: table;
}

.emotion-20:after {
  clear: both;
}

.emotion-18 {
  position: relative;
  left: 10%;
  -webkit-transition: left 0.5s;
  transition: left 0.5s;
  width: 50px;
  margin-left: -25px;
  display: inline-block;
  text-align: center;
}

.emotion-24 {
  height: 10px;
  background: #dfe0f1;
  border-radius: 5px;
  overflow: hidden;
  position: relative;
}

.emotion-22 {
  width: 10%;
  height: 100%;
  border: none;
  border-radius: 5px;
  -webkit-transition: width 0.5s;
  transition: width 0.5s;
  position: relative;
  background: #3860f4;
}

.emotion-26 {
  float: right;
}

.emotion-36 {
  position: relative;
  line-height: 1;
  background-color: transparent;
}

.emotion-34 {
  position: absolute;
  -webkit-inset-block-start: 50%;
  -ms-intb-rlock-start: 50%;
  inset-block-start: 50%;
  inset-inline-start: 0;
  width: 100%;
  margin: 0;
  padding: 0;
  line-height: 1;
  white-space: normal;
  text-align: center;
  -webkit-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
}

.emotion-16 {
  font-size: 12px;
}

.emotion-16 .uc-fe-form-item {
  margin-bottom: 16px;
}

.emotion-16 .uc-fe-form-item:last-child {
  margin-bottom: 0;
}

.emotion-14 {
  position: relative;
  display: block;
  height: auto;
  margin-left: -8px;
  margin-right: -8px;
}

.emotion-14:before,
.emotion-14:after {
  content: ' ';
  display: table;
}

.emotion-14:after {
  clear: both;
}

.emotion-14 > .uc-fe-col {
  padding-left: 8px;
  padding-right: 8px;
}

.emotion-1 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 16.66666667%;
  padding-top: 4px;
  line-height: 20px;
  word-break: break-all;
  color: #526075;
}

.emotion-10 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 75%;
}

.emotion-7 {
  position: relative;
  box-sizing: border-box;
  border-radius: 2px;
  color: #0a1633;
  height: 28px;
  display: inline-block;
  vertical-align: middle;
  border: 1px solid #d2d6ea;
  padding-right: 22px;
  border-right-width: 0;
}

.emotion-7 .uc-fe-numberinput-input-wrap {
  position: relative;
}

.emotion-7 .uc-fe-numberinput-input {
  border: none;
  outline: none;
  padding: 0;
  margin: 0;
  color: inherit;
}

.emotion-7 .uc-fe-numberinput-suffix {
  color: #7a8baa;
  margin: 0 4px;
  display: inline-block;
  vertical-align: middle;
}

.emotion-7 .uc-fe-numberinput-handler-up,
.emotion-7 .uc-fe-numberinput-handler-down {
  position: absolute;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  box-sizing: border-box;
  border-radius: 2px;
  border-style: solid;
  border-color: #d2d6ea;
  cursor: pointer;
  color: #0a1633;
  box-shadow: 0 2px 3px 0 rgba(0,0,0,0.12),inset 0 -2px 0 0 #e3e9ff;
  background: #ffffff;
  vertical-align: middle;
}

.emotion-7 .uc-fe-numberinput-handler-up:hover,
.emotion-7 .uc-fe-numberinput-handler-down:hover {
  color: #3860f4;
  box-shadow: 0 0 1px 0 rgba(0,0,0,0.12),0 8px 12px -4px rgba(0,0,0,0.12),0 2px 1px -1px rgba(0,0,0,0.05),inset 0 -2px 0 0 #e3e9ff;
}

.emotion-7 .uc-fe-numberinput-handler-up.uc-fe-numberinput-handler-disabled,
.emotion-7 .uc-fe-numberinput-handler-down.uc-fe-numberinput-handler-disabled {
  cursor: default;
  pointer-events: none;
  color: #cccccc;
  fill: #cccccc;
  border-color: #c3cad9;
}

.emotion-7 .uc-fe-numberinput-input {
  line-height: 26px;
  height: 26px;
  display: inline-block;
  vertical-align: middle;
}

.emotion-7 .uc-fe-numberinput-input::-webkit-input-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.2);
}

.emotion-7 .uc-fe-numberinput-input::-moz-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.2);
}

.emotion-7 .uc-fe-numberinput-input:-ms-input-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.2);
}

.emotion-7 .uc-fe-numberinput-input::placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.2);
}

.emotion-7:hover {
  border-color: #c3cad9;
}

.emotion-7 .uc-fe-numberinput-input-wrap {
  box-shadow: inset 0 3px 0 0 rgba(0,0,0,0.05);
  background: #fafafc;
}

.emotion-7 .uc-fe-numberinput-input-wrap:hover {
  background: #f6f6fb;
}

.emotion-7 .uc-fe-numberinput-input {
  padding: 0 0 0 8px;
  text-align: left;
  box-shadow: none;
  background: transparent;
  width: 34px;
}

.emotion-7 .uc-fe-numberinput-handler-up,
.emotion-7 .uc-fe-numberinput-handler-down {
  height: 13px;
  width: 22px;
  right: 0;
  box-sizing: content-box;
  border-radius: 0;
}

.emotion-7 .uc-fe-numberinput-handler-up:hover,
.emotion-7 .uc-fe-numberinput-handler-down:hover {
  color: #3860f4;
}

.emotion-7 .uc-fe-numberinput-handler-up {
  border-width: 0 0 0 1px;
  top: -1px;
  padding-top: 1px;
}

.emotion-7 .uc-fe-numberinput-handler-down {
  border-width: 1px 0 0 1px;
  bottom: 0;
  border-top-color: #c3cad9;
}

.emotion-3 {
  -webkit-transition: fill 0.3s,width 0.3s,height 0.3s;
  transition: fill 0.3s,width 0.3s,height 0.3s;
  display: inline-block;
  vertical-align: middle;
  fill: currentcolor;
  width: 12px;
  height: 12px;
}

.emotion-20 {
  position: relative;
  height: 18px;
  line-height: 18px;
}

.emotion-20:before,
.emotion-20:after {
  content: ' ';
  display: table;
}

.emotion-20:after {
  clear: both;
}

.emotion-18 {
  position: relative;
  left: 10%;
  -webkit-transition: left 0.5s;
  transition: left 0.5s;
  width: 50px;
  margin-left: -25px;
  display: inline-block;
  text-align: center;
}

.emotion-24 {
  height: 10px;
  background: #dfe0f1;
  border-radius: 5px;
  overflow: hidden;
  position: relative;
}

.emotion-22 {
  width: 10%;
  height: 100%;
  border: none;
  border-radius: 5px;
  -webkit-transition: width 0.5s;
  transition: width 0.5s;
  position: relative;
  background: #3860f4;
}

.emotion-26 {
  float: right;
}

.emotion-36 {
  position: relative;
  line-height: 1;
  background-color: transparent;
}

.emotion-34 {
  position: absolute;
  -webkit-inset-block-start: 50%;
  -ms-intb-rlock-start: 50%;
  inset-block-start: 50%;
  inset-inline-start: 0;
  width: 100%;
  margin: 0;
  padding: 0;
  line-height: 1;
  white-space: normal;
  text-align: center;
  -webkit-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
}

<div>
  <form
    class="uc-fe-form emotion-16 emotion-130"
  >
    <div
      class="uc-fe-row uc-fe-form-item emotion-12 emotion-13 emotion-14 emotion-15"
    >
      <div
        class="uc-fe-col uc-fe-form-label emotion-0 emotion-1 emotion-2"
        span="2"
      >
        percent
      </div>
      <div
        class="uc-fe-col uc-fe-form-controller emotion-9 emotion-10 emotion-2"
        span="9"
      >
        <div
          class="uc-fe-numberinput uc-fe-numberinput-styletype-default emotion-7 emotion-8"
        >
          <div>
            <span
              class="uc-fe-numberinput-handler-up"
              unselectable="unselectable"
            >
              <svg
                class=" emotion-3 emotion-4"
                viewBox="0 0 24 24"
              >
                <path
                  d="M12.6965559,6.27668537 L21.8268863,15.0324157 C22.0577046,15.253764 22.0577046,15.6126405 21.8268863,15.8339888 C21.7160434,15.940284 21.5657082,16 21.4089527,16 L2.5910473,16 C2.26462089,16 2,15.746236 2,15.4332022 C2,15.2828781 2.06227088,15.1387109 2.17311375,15.0324157 L11.3034441,6.27668537 C11.6881413,5.90777154 12.3118587,5.90777154 12.6965559,6.27668537 Z"
                />
              </svg>
            </span>
            <span
              class="uc-fe-numberinput-handler-down"
              unselectable="unselectable"
            >
              <svg
                class=" emotion-3 emotion-4"
                viewBox="0 0 24 24"
              >
                <path
                  d="M12.6965559,17.7233146 L21.8268863,8.96758429 C22.0577046,8.746236 22.0577046,8.38735951 21.8268863,8.16601122 C21.7160434,8.05971602 21.5657082,8 21.4089527,8 L2.5910473,8 C2.26462089,8 2,8.253764 2,8.56679776 C2,8.71712187 2.06227088,8.86128909 2.17311375,8.96758429 L11.3034441,17.7233146 C11.6881413,18.0922285 12.3118587,18.0922285 12.6965559,17.7233146 Z"
                />
              </svg>
            </span>
          </div>
          <div
            class="uc-fe-numberinput-input-wrap"
          >
            <input
              autocomplete="off"
              class="uc-fe-numberinput-input"
              max="100"
              min="0"
              step="1"
              value="10"
            />
          </div>
        </div>
      </div>
    </div>
  </form>
  <div
    class="demo-wrap"
    style="padding:24px"
  >
    <div>
      <span
        class="emotion-20 emotion-21"
      >
        <span
          class="emotion-18 emotion-19"
        >
          10.00%
        </span>
      </span>
      <div
        class=" emotion-24 emotion-25"
        stroke-width="10"
      >
        <div
          class=" emotion-22 emotion-23"
        />
      </div>
      <span
        class="emotion-20 emotion-21"
      >
        <span>
          0.00%
        </span>
        <span
          class="emotion-26 emotion-27"
        >
          100.00%
        </span>
      </span>
    </div>
  </div>
  <div
    class="demo-wrap"
    style="padding:24px"
  >
    <div>
      <div
        class=" emotion-24 emotion-25"
        stroke-width="10"
      >
        <div
          class=" emotion-22 emotion-23"
        />
      </div>
    </div>
  </div>
  <div
    class="demo-wrap"
    style="padding:24px;width:100px"
  >
    <div
      class="emotion-36 emotion-37"
    >
      <svg
        class="rc-progress-circle"
        role="presentation"
        viewBox="-50 -50 100 100"
      >
        <circle
          class="rc-progress-circle-trail"
          cx="0"
          cy="0"
          r="45"
          stroke="#dfe0f1"
          stroke-linecap="round"
          stroke-width="10"
          style="stroke:#dfe0f1;stroke-dasharray:282.7433388230814px 282.7433388230814;stroke-dashoffset:0;transform:rotate(-90deg);transform-origin:0 0;transition:stroke-dashoffset .3s ease 0s, stroke-dasharray .3s ease 0s, stroke .3s, stroke-width .06s ease .3s, opacity .3s ease 0s;fill-opacity:0"
        />
        <circle
          class="rc-progress-circle-path"
          cx="0"
          cy="0"
          opacity="1"
          r="45"
          stroke-linecap="round"
          stroke-width="10"
          style="stroke:#3860f4;stroke-dasharray:282.7433388230814px 282.7433388230814;stroke-dashoffset:259.4690049407733;transform:rotate(-90deg);transform-origin:0 0;transition:stroke-dashoffset .3s ease 0s, stroke-dasharray .3s ease 0s, stroke .3s, stroke-width .06s ease .3s, opacity .3s ease 0s;fill-opacity:0"
        />
      </svg>
      <div
        class="emotion-34 emotion-35"
      >
        10.00%
      </div>
    </div>
  </div>
  <div
    class="demo-wrap"
    style="padding:24px;width:100px"
  >
    <div
      class="emotion-36 emotion-37"
    >
      <svg
        class="rc-progress-circle"
        role="presentation"
        viewBox="-50 -50 100 100"
      >
        <circle
          class="rc-progress-circle-trail"
          cx="0"
          cy="0"
          r="45"
          stroke="#dfe0f1"
          stroke-linecap="round"
          stroke-width="10"
          style="stroke:#dfe0f1;stroke-dasharray:282.7433388230814px 282.7433388230814;stroke-dashoffset:0;transform:rotate(-90deg);transform-origin:0 0;transition:stroke-dashoffset .3s ease 0s, stroke-dasharray .3s ease 0s, stroke .3s, stroke-width .06s ease .3s, opacity .3s ease 0s;fill-opacity:0"
        />
        <circle
          class="rc-progress-circle-path"
          cx="0"
          cy="0"
          opacity="1"
          r="45"
          stroke-linecap="round"
          stroke-width="10"
          style="stroke:#3860f4;stroke-dasharray:282.7433388230814px 282.7433388230814;stroke-dashoffset:259.4690049407733;transform:rotate(-90deg);transform-origin:0 0;transition:stroke-dashoffset .3s ease 0s, stroke-dasharray .3s ease 0s, stroke .3s, stroke-width .06s ease .3s, opacity .3s ease 0s;fill-opacity:0"
        />
      </svg>
    </div>
  </div>
</div>
`;
